kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-service
spec:
  selector:
    app: todo-backend # Find the pods managed by our backend deployment
  ports:
  - protocol: TCP
    port: 8080 # The port this service will expose
    targetPort: 8080 # The port on the pods to send traffic to
