kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-service
spec:
  selector:
    app: todo-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
